--- a/tex/our_proceeding.tex
+++ b/tex/our_proceeding.tex
@@ -163,13 +163,9 @@
 \maketitle
 
 \begin{abstract}
-  UPDATED---\today. This sample paper describes the formatting
-  requirements for SIGCHI conference proceedings, and offers
-  recommendations on writing for the worldwide SIGCHI
-  readership. Please review this document even if you have submitted
-  to SIGCHI conferences before, as some format details have changed
-  relative to previous years. Abstracts should be about 150 words and
-  are required.
+Eye trackers today have been extensively used in user interface evaluations. Eye tracking data, however, are hard to be analyzed and interpreted from aesthetic point of view. To find quantitative links between eye movements and aesthetic experience, we eye tracked 30 observers¡¯ initial landings of 40 webpages (each page for 3 seconds). The webpages were also rated based on the observers¡¯ aesthetic judgments. 
+
+In analyzing the eye tracking data, the Shannon entropy was adopted. The result shows that the heat map entropy (visual attention entropy, VAE) is highly correlated with the observers' aesthetic judgements of the webpages. VAE is interpreted as the fluency/chaos in observers' attentional processes. Its improved version, Relative VAE (rVAE), has more significant correlation with the perceived aesthetics. (r=-0,65; F= 26.84,P=0.000007). This single metric alone can separate the good or bad looking pages with correctness about 87.5\%. Further investigation of both VAE and rVAE reveals that their performances could be even better, if the tracking time were extended more than just 3 seconds.
 \end{abstract}
 
 \category{H.5.m.}{Information Interfaces and Presentation
